--- a/ios/baseball/baseball/Presentor/UI/View/Play/MatchBoardView.xib
+++ b/ios/baseball/baseball/Presentor/UI/View/Play/MatchBoardView.xib
@@ -49,6 +49,9 @@
                     <state key="normal" title="PITCH">
                         <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </state>
+                    <connections>
+                        <action selector="pitchButtonTapped:" destination="-1" eventType="touchUpInside" id="Vbn-Z3-f6s"/>
+                    </connections>
                 </button>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="PfB-qn-oTk" customClass="SBOBoardView" customModule="baseball" customModuleProvider="target">
                     <rect key="frame" x="12" y="56" width="60" height="60"/>
