--- a/ios/baseball/baseball/Presentor/UI/View/Base.lproj/Main.storyboard
+++ b/ios/baseball/baseball/Presentor/UI/View/Base.lproj/Main.storyboard
@@ -34,12 +34,18 @@
                                             <rect key="frame" x="0.0" y="0.0" width="350" height="105"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <view alpha="0.80000000000000004" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="rQn-Ze-R4M">
+                                                <view alpha="0.80000000000000004" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="rQn-Ze-R4M" customClass="GradientView" customModule="baseball" customModuleProvider="target">
                                                     <rect key="frame" x="0.0" y="0.0" width="350" height="105"/>
                                                     <color key="backgroundColor" systemColor="systemGray5Color"/>
                                                     <userDefinedRuntimeAttributes>
                                                         <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
-                                                            <integer key="value" value="18"/>
+                                                            <integer key="value" value="22"/>
+                                                        </userDefinedRuntimeAttribute>
+                                                        <userDefinedRuntimeAttribute type="color" keyPath="firstColor">
+                                                            <color key="value" systemColor="systemGray2Color"/>
+                                                        </userDefinedRuntimeAttribute>
+                                                        <userDefinedRuntimeAttribute type="color" keyPath="secondColor">
+                                                            <color key="value" red="0.65214916924481536" green="0.78907575110513262" blue="1" alpha="0.89803921568627454" colorSpace="custom" customColorSpace="sRGB"/>
                                                         </userDefinedRuntimeAttribute>
                                                     </userDefinedRuntimeAttributes>
                                                 </view>
