--- a/ios/baseball/baseball/Presentor/UI/View/Base.lproj/Main.storyboard
+++ b/ios/baseball/baseball/Presentor/UI/View/Base.lproj/Main.storyboard
@@ -179,6 +179,21 @@
                                     </userDefinedRuntimeAttribute>
                                 </userDefinedRuntimeAttributes>
                             </view>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="TQL-xk-L3C" customClass="PitchButton" customModule="baseball" customModuleProvider="target">
+                                <rect key="frame" x="145" y="236" width="100" height="36"/>
+                                <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="100" id="0pf-pP-IDy"/>
+                                    <constraint firstAttribute="height" constant="36" id="QEg-YF-JaV"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="18"/>
+                                <state key="normal" title="PITCH">
+                                    <color key="titleColor" systemColor="systemBackgroundColor"/>
+                                </state>
+                                <connections>
+                                    <action selector="pitchButtonTapped:" destination="kq7-CK-g93" eventType="touchUpInside" id="322-ak-OhL"/>
+                                </connections>
+                            </button>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="KZz-Cl-gT2" customClass="MatchUpView" customModule="baseball" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="404" width="390" height="110"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
@@ -197,7 +212,7 @@
                                 <rect key="frame" x="0.0" y="516" width="390" height="245"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="IU1-wn-CIw">
-                                    <size key="itemSize" width="390" height="54"/>
+                                    <size key="itemSize" width="390" height="40"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
@@ -259,9 +274,11 @@
                             <constraint firstItem="BKm-lo-4HL" firstAttribute="trailing" secondItem="GPF-AB-swK" secondAttribute="trailing" id="Itw-FM-5Pv"/>
                             <constraint firstItem="BKm-lo-4HL" firstAttribute="top" secondItem="GPF-AB-swK" secondAttribute="top" id="Ofa-tc-cVk"/>
                             <constraint firstItem="KZz-Cl-gT2" firstAttribute="top" secondItem="elN-VX-KSR" secondAttribute="bottom" id="QIW-fM-7bp"/>
+                            <constraint firstItem="TQL-xk-L3C" firstAttribute="centerX" secondItem="elN-VX-KSR" secondAttribute="centerX" id="Sef-iD-nsQ"/>
                             <constraint firstItem="0ND-gC-jD8" firstAttribute="leading" secondItem="GPF-AB-swK" secondAttribute="leading" id="ThK-QI-OX5"/>
                             <constraint firstItem="ql2-US-lDI" firstAttribute="top" secondItem="0ND-gC-jD8" secondAttribute="bottom" id="UDa-UJ-Ss2"/>
                             <constraint firstItem="KZz-Cl-gT2" firstAttribute="trailing" secondItem="GPF-AB-swK" secondAttribute="trailing" id="VHn-vu-Dyk"/>
+                            <constraint firstItem="TQL-xk-L3C" firstAttribute="centerY" secondItem="elN-VX-KSR" secondAttribute="centerY" id="XdN-qp-mVL"/>
                             <constraint firstItem="GPF-AB-swK" firstAttribute="bottom" secondItem="ql2-US-lDI" secondAttribute="bottom" id="hRc-Ac-dvd"/>
                             <constraint firstItem="0ND-gC-jD8" firstAttribute="top" secondItem="KZz-Cl-gT2" secondAttribute="bottom" id="l7U-Uu-zAB"/>
                             <constraint firstItem="elN-VX-KSR" firstAttribute="trailing" secondItem="GPF-AB-swK" secondAttribute="trailing" id="ofO-3T-rdU"/>
@@ -276,6 +293,7 @@
                         <outlet property="collectionView" destination="ql2-US-lDI" id="abf-qk-P0O"/>
                         <outlet property="matchBoardView" destination="elN-VX-KSR" id="NT1-Z9-YSC"/>
                         <outlet property="matchUpView" destination="KZz-Cl-gT2" id="swu-cr-S8A"/>
+                        <outlet property="pitchButton" destination="TQL-xk-L3C" id="OPf-o2-lNa"/>
                         <outlet property="scoreView" destination="BKm-lo-4HL" id="uIK-P4-dBR"/>
                     </connections>
                 </viewController>
